# name: TestSessionsTimelineQueryRunner.test_formal_session_with_recording
  '
  SELECT e.uuid,
         toTimeZone(e.timestamp, 'UTC') AS timestamp,
         e.event,
         e.properties,
         e.distinct_id,
         e.elements_chain,
         e.`$session_id` AS formal_session_id,
         first_value(e.uuid) OVER (PARTITION BY e.`$session_id`
                                   ORDER BY divide(toInt64(toTimeZone(e.timestamp, 'UTC') AS timestamp), 60000000.0) ASC RANGE BETWEEN 1800 PRECEDING AND CURRENT ROW) AS informal_session_uuid,
                                  dateDiff('s', sre.start_time, sre.end_time) AS recording_duration_s
  FROM events AS e
  LEFT JOIN
    (SELECT toTimeZone(session_replay_events.start_time, 'UTC') AS start_time,
            toTimeZone(session_replay_events.end_time, 'UTC') AS end_time,
            session_replay_events.session_id
     FROM
       (SELECT min(session_replay_events.min_first_timestamp) AS start_time,
               max(session_replay_events.max_last_timestamp) AS end_time,
               session_replay_events.session_id AS session_id
        FROM session_replay_events
        WHERE equals(session_replay_events.team_id, 2)
        GROUP BY session_replay_events.session_id) AS session_replay_events) AS sre ON equals(e.`$session_id`, sre.session_id)
  WHERE and(equals(e.team_id, 2), greaterOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp,
                                                    (SELECT min(toTimeZone(e.timestamp, 'UTC') AS timestamp)
                                                     FROM events AS e
                                                     WHERE and(equals(e.team_id, 2), or(in(e.`$session_id`,
                                                                                             (SELECT DISTINCT e.`$session_id`
                                                                                              FROM events AS e
                                                                                              WHERE and(equals(e.team_id, 2), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC')))
                                                                                              LIMIT 100)), and(isNull(e.`$session_id`), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), less(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC'))))))), lessOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp,
                                                                                                                                                                                                                                                                                                                                                                                                           (SELECT max(toTimeZone(e.timestamp, 'UTC') AS timestamp)
                                                                                                                                                                                                                                                                                                                                                                                                            FROM events AS e
                                                                                                                                                                                                                                                                                                                                                                                                            WHERE and(equals(e.team_id, 2), or(in(e.`$session_id`,
                                                                                                                                                                                                                                                                                                                                                                                                                                                    (SELECT DISTINCT e.`$session_id`
                                                                                                                                                                                                                                                                                                                                                                                                                                                     FROM events AS e
                                                                                                                                                                                                                                                                                                                                                                                                                                                     WHERE and(equals(e.team_id, 2), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC')))
                                                                                                                                                                                                                                                                                                                                                                                                                                                     LIMIT 100)), and(isNull(e.`$session_id`), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), less(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC'))))))))
  ORDER BY toTimeZone(e.timestamp, 'UTC') AS timestamp ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1
  '
---
# name: TestSessionsTimelineQueryRunner.test_formal_sessions_for_person
  '
  SELECT e.uuid,
         toTimeZone(e.timestamp, 'UTC') AS timestamp,
         e.event,
         e.properties,
         e.distinct_id,
         e.elements_chain,
         e.`$session_id` AS formal_session_id,
         first_value(e.uuid) OVER (PARTITION BY e.`$session_id`
                                   ORDER BY divide(toInt64(toTimeZone(e.timestamp, 'UTC') AS timestamp), 60000000.0) ASC RANGE BETWEEN 1800 PRECEDING AND CURRENT ROW) AS informal_session_uuid,
                                  dateDiff('s', sre.start_time, sre.end_time) AS recording_duration_s
  FROM events AS e
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 2)
     GROUP BY person_distinct_id2.distinct_id
     HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
  LEFT JOIN
    (SELECT toTimeZone(session_replay_events.start_time, 'UTC') AS start_time,
            toTimeZone(session_replay_events.end_time, 'UTC') AS end_time,
            session_replay_events.session_id
     FROM
       (SELECT min(session_replay_events.min_first_timestamp) AS start_time,
               max(session_replay_events.max_last_timestamp) AS end_time,
               session_replay_events.session_id AS session_id
        FROM session_replay_events
        WHERE equals(session_replay_events.team_id, 2)
        GROUP BY session_replay_events.session_id) AS session_replay_events) AS sre ON equals(e.`$session_id`, sre.session_id)
  WHERE and(equals(e.team_id, 2), ifNull(equals(e__pdi.person_id, '018b4ca4-45af-0000-0cf4-4504ae523461'), 0))
  ORDER BY toTimeZone(e.timestamp, 'UTC') AS timestamp ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1
  '
---
# name: TestSessionsTimelineQueryRunner.test_formal_sessions_global
  '
  SELECT e.uuid,
         toTimeZone(e.timestamp, 'UTC') AS timestamp,
         e.event,
         e.properties,
         e.distinct_id,
         e.elements_chain,
         e.`$session_id` AS formal_session_id,
         first_value(e.uuid) OVER (PARTITION BY e.`$session_id`
                                   ORDER BY divide(toInt64(toTimeZone(e.timestamp, 'UTC') AS timestamp), 60000000.0) ASC RANGE BETWEEN 1800 PRECEDING AND CURRENT ROW) AS informal_session_uuid,
                                  dateDiff('s', sre.start_time, sre.end_time) AS recording_duration_s
  FROM events AS e
  LEFT JOIN
    (SELECT toTimeZone(session_replay_events.start_time, 'UTC') AS start_time,
            toTimeZone(session_replay_events.end_time, 'UTC') AS end_time,
            session_replay_events.session_id
     FROM
       (SELECT min(session_replay_events.min_first_timestamp) AS start_time,
               max(session_replay_events.max_last_timestamp) AS end_time,
               session_replay_events.session_id AS session_id
        FROM session_replay_events
        WHERE equals(session_replay_events.team_id, 2)
        GROUP BY session_replay_events.session_id) AS session_replay_events) AS sre ON equals(e.`$session_id`, sre.session_id)
  WHERE and(equals(e.team_id, 2), greaterOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp,
                                                    (SELECT min(toTimeZone(e.timestamp, 'UTC') AS timestamp)
                                                     FROM events AS e
                                                     WHERE and(equals(e.team_id, 2), or(in(e.`$session_id`,
                                                                                             (SELECT DISTINCT e.`$session_id`
                                                                                              FROM events AS e
                                                                                              WHERE and(equals(e.team_id, 2), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC')))
                                                                                              LIMIT 100)), and(isNull(e.`$session_id`), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), less(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC'))))))), lessOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp,
                                                                                                                                                                                                                                                                                                                                                                                                           (SELECT max(toTimeZone(e.timestamp, 'UTC') AS timestamp)
                                                                                                                                                                                                                                                                                                                                                                                                            FROM events AS e
                                                                                                                                                                                                                                                                                                                                                                                                            WHERE and(equals(e.team_id, 2), or(in(e.`$session_id`,
                                                                                                                                                                                                                                                                                                                                                                                                                                                    (SELECT DISTINCT e.`$session_id`
                                                                                                                                                                                                                                                                                                                                                                                                                                                     FROM events AS e
                                                                                                                                                                                                                                                                                                                                                                                                                                                     WHERE and(equals(e.team_id, 2), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC')))
                                                                                                                                                                                                                                                                                                                                                                                                                                                     LIMIT 100)), and(isNull(e.`$session_id`), greater(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), less(toTimeZone(e.timestamp, 'UTC') AS timestamp, parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC'))))))))
  ORDER BY toTimeZone(e.timestamp, 'UTC') AS timestamp ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1
  '
---
